# playground-mlflow

./: .gitignore  pyproject.toml
src/: _1_quickstart.py  _2_autolog.py
