[tool.poetry]
name = "playground-mlflow"
version = "0.1.0"
description = ""
authors = ["wavetitan <wavetitango@gmail.com>"]
readme = "README.md"
packages = [{include = "playground_mlflow"}]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.0.1"
scikit-learn = "^1.2.0"
xgboost = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
